--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,17 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <distributionManagement>
+    <repository>
+      <id>nexus</id>
+      <name>demo</name>
+      <url>http://65.0.100.31:8081/repository/time-tracker-release/</url>
+    </repository>
+    <snapshotRepository>
+      <id>nexus</id>
+      <name>demo</name>
+      <url>http://65.0.100.31:8081/repository/time-tracker-snapshot/</url>
+    </snapshotRepository>
   <build>
     <finalName>CubeGeneratorWeb</finalName>
   </build>
